# mixxx

./: .gitignore  .travis.yml  Brewfile  SConstruct  WORKSPACE  appveyor.yml
lib/: BUILD
lib/reverb/: Reverb.cc  Reverb.h  basics.h
lib/reverb/dsp/: Delay.h
mixxx/res/skins/LateNight1280x800-WXGA/: skin.xml
mixxx/src/: basetrackplayer.cpp  basetrackplayer.h  cachingreader.cpp  controlvaluedelegate.cpp  mixxx.cpp  mixxx.h  trackinfoobject.h
mixxx/src/controllers/: controller.cpp  controller.h  controllermanager.cpp  controllermanager.h  midiclockthread.cpp  midiclockthread.h
mixxx/src/controllers/midi/: midicontroller.cpp  midicontroller.h
mixxx/src/engine/: bpmcontrol.cpp  bpmcontrol.h  clockcontrol.cpp  cuecontrol.cpp  enginebuffer.cpp  enginebuffer.h  enginebufferscalest.cpp  enginebufferscalest.h  enginechannel.cpp  engineclipping.h  enginemaster.cpp  enginemaster.h  enginepregain.h  engineworkerscheduler.cpp  quantizecontrol.cpp  ratecontrol.cpp  readaheadmanager.cpp  readaheadmanager.h  syncworker.cpp  vinylcontrolcontrol.cpp
mixxx/src/qml/: qmlengine.cpp  qmlengine.h
mixxx/src/skin/: legacyskinparser.cpp  legacyskinparser.h
res/: BUILD.bazel
res/skins/LateNight1280x800-WXGA/: skin.xml
src/: BUILD.bazel  SConscript  basetrackplayer.cpp  cachingreader.h  controlobject.cpp  controlvaluedelegate.cpp  main.cpp  mixxx.cpp  mixxx.h  playermanager.cpp  soundmanager.cpp  soundmanagerutil.cpp  soundmanagerutil.h
src/analyzer/: analyzerkey.cpp
src/control/: control.cpp  vectorcontrol.h
src/controllers/: controller.cpp  controller.h  controllerengine.cpp  controllerengine.h  controllermanager.cpp  controllermanager.h  controllerpresetfilehandler.cpp  controllerpresetvisitor.h  defs_controllers.h  dlgcontrollerlearning.h
src/controllers/hid/: hidcontroller.cpp  hidcontroller.h
src/controllers/midi/: midiclockthread.cpp  midicontroller.cpp  midicontroller.h  midioutputhandler.cpp
src/controllers/osc/: osccontroller.cpp  osccontroller.h  osccontrollerpreset.h  osccontrollerpresetfilehandler.cpp  osccontrollerpresetfilehandler.h  oscenumerator.cpp  oscenumerator.h  oscmessage.h  oscserver.cpp  oscserver.h
src/controllers/script/: engine.h  require.cpp  require.h  scriptapi.h
src/effects/native/: reverbeffect.cpp  reverbeffect.h
src/engine/: audioscene.cpp  audioscene.h  clockcontrol.cpp  clockcontrol.h  enginebuffer.cpp  enginebuffer.h  enginechannel.cpp  enginechannel.h  enginedeck.cpp  enginedeck.h  enginemaster.cpp  enginemaster.h  enginepassthrough.cpp  enginepassthrough.h  enginepregain.cpp  enginevumeter.cpp  enginevumeter.h  engineworker.cpp  engineworkerscheduler.cpp  engineworkerscheduler.h  featurecollector.cpp  featurecollector.h  featureextractor.cpp  featureextractor.h  loopingcontrol.cpp  loopingcontrol.h  positionscratchcontroller.cpp  positionscratchcontroller.h  quantizecontrol.cpp  ratecontrol.cpp  ratecontrol.h  readaheadmanager.cpp  scratchcontroller.cpp  scratchcontroller.h  simplejogwheel.cpp  simplejogwheel.h  syncworker.cpp
src/engine/effects/: groupfeaturestate.h
src/lights/: lightcontroller.cpp  lightshowcontroller.cpp
src/lights/model/: colordelegate.cpp
src/musicbrainz/: acoustidclient.cpp  acoustidclient.h  musicbrainzclient.cpp  musicbrainzclient.h
src/preferences/dialog/: dlgpreferences.cpp
src/proto/: audio_features.proto
src/skin/: legacyskinparser.cpp  legacyskinparser.h
src/test/: controllerengine_test.cpp  keyutilstest.cpp  tableview_test.cpp
src/track/: beatgrid.h  beatmap.h  keyfactory.h  keys.h  keyutils.h  trackrecord.h
src/util/: alphabetafilter.h  uptime.cpp  uptime.h
src/util/battery/: batterylinux.cpp  batterywindows.cpp
src/waveform/: guitick.h  sharedglcontext.cpp  sharedglcontext.h  visualplayposition.h  vsyncthread.cpp  vsyncthread.h  waveform.cpp  waveform.h  waveformfactory.cpp  waveformfactory.h  waveformwidgetfactory.cpp  waveformwidgetfactory.h
src/waveform/renderers/: glslwaveformrenderersignal.cpp  glslwaveformrenderersignal.h  glvsynctestrenderer.cpp  glvsynctestrenderer.h  glwaveformrendererfilteredsignal.cpp  glwaveformrendererfilteredsignal.h  glwaveformrendererrgb.cpp  glwaveformrendererrgb.h  glwaveformrenderersimplesignal.cpp  glwaveformrenderersimplesignal.h  qtwaveformrendererfilteredsignal.cpp  qtwaveformrendererfilteredsignal.h  qtwaveformrenderersimplesignal.cpp  qtwaveformrenderersimplesignal.h  waveformmark.cpp  waveformmarkrange.cpp  waveformmarkset.cpp  waveformrenderbackground.cpp  waveformrenderbackground.h  waveformrenderbeat.cpp  waveformrenderbeat.h  waveformrendererabstract.cpp  waveformrendererendoftrack.cpp  waveformrendererendoftrack.h  waveformrendererfilteredsignal.cpp  waveformrendererfilteredsignal.h  waveformrendererhsv.cpp  waveformrendererhsv.h  waveformrendererpreroll.cpp  waveformrendererpreroll.h  waveformrendererrgb.cpp  waveformrendererrgb.h  waveformrenderersignalbase.cpp  waveformrenderersignalbase.h  waveformrendermark.cpp  waveformrendermark.h  waveformrendermarkrange.cpp  waveformrendermarkrange.h  waveformsignalcolors.h  waveformwidgetrenderer.cpp  (+1 more)
src/waveform/widgets/: emptywaveformwidget.cpp  emptywaveformwidget.h  glrgbwaveformwidget.cpp  glrgbwaveformwidget.h  glsimplewaveformwidget.cpp  glsimplewaveformwidget.h  glslwaveformwidget.cpp  glslwaveformwidget.h  glvsynctestwidget.cpp  glvsynctestwidget.h  glwaveformwidget.cpp  glwaveformwidget.h  hsvwaveformwidget.cpp  hsvwaveformwidget.h  qtsimplewaveformwidget.cpp  qtsimplewaveformwidget.h  qtwaveformwidget.cpp  qtwaveformwidget.h  rgbwaveformwidget.cpp  rgbwaveformwidget.h  softwarewaveformwidget.cpp  softwarewaveformwidget.h  waveformwidgetabstract.cpp  waveformwidgetabstract.h
src/widget/: wtracktableviewheader.h
